2011-07-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-read-ephemeral-emacs-bug-group): `debbugs-*'
	renamed to `debbugs-gnu-*'.

2011-07-08  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el: Revert the editing feature since it is not urgent.
	(plstore-mode, plstore-mode-toggle-display, plstore-mode-original)
	(plstore-mode-decoded): Remove.

2011-07-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-bug): Don't insert user variables.  It usually
	isn't very interesting any more, and it leaks potentially secret data.
	(gnus-debug): Removed.

	* gnus-art.el (gnus-ignored-headers): Removed obsolete and non-working
	use of :custom-show.

2011-07-07  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el: Add documentation.
	(plstore-mode): New mode to edit plstore file.
	(plstore-mode-toggle-display, plstore-mode-original)
	(plstore-mode-decoded): New command.
	(plstore--encode, plstore--decode, plstore--write-contents-functions)
	(plstore--insert-buffer, plstore--make): New function.
	(plstore-open, plstore-save): Simplify by using them.

2011-07-06  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-read-ephemeral-emacs-bug-group): Silence compiler.

2011-07-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-refer-article-method): Remove mention of nnspool, which
	no longer is much used.
	(gnus-summary-line-format): Link to "Marking Articles" instead of "Read
	Articles".

2011-04-03  Kan-Ru Chen  <kanru@kanru.info>

	* nnir.el (nnir-notmuch-program, nnir-notmuch-additional-switches)
	(nnir-notmuch-remove-prefix, nnir-engines, nnir-run-notmuch): New nnir
	`notmuch' backend.

2011-07-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-text-html-renderer): Doc fix.

	* gnus-msg.el (gnus-bug): Fix the MML tag.

	* pop3.el (pop3-open-server): -ERR is a valid response to CAPA.

2011-07-05  Daiki Ueno  <ueno@unixuser.org>

	* gnus-start.el (gnus-get-unread-articles): Don't connect to the